# Kerberos

./: AttackerExplanation.docx  README.md  pyproject.toml
AuthServer/: AuthServer.py  msg.info.txt  utils.py
kerberos/: attacker.py  main.py
kerberos/authserver/: AuthServer.py  clients.txt  msg.info.txt
kerberos/clientapp/: ClientApp.py  abu_me.info  sagiv_me.info  sagiv_srv.info  viki_me.info  viki_srv.info
kerberos/msgserver/: MsgServer.py  SagivAbu_msg.info.txt  SagivSagiv_msg.info.txt  SagivSrv_msg.info.txt  SagivSrvtest_msg.info.txt  VickySrv_msg.info.txt  msg.info.txt
kerberos/utils/: decryption.py  encryption.py  enums.py  structs.py  utils.py
kerberos/utils/__pycache__/: structs.cpython-311.pyc.1891474446768
tests/ClientApp/: main_run.py  test_clientapp.py
tests/utils/: test_client.py  test_payload.py  test_request.py
